horizontal overflow bug fixed; individual prizes photos rearranged

--- a/css/prizes.sass
+++ b/css/prizes.sass
@@ -1,26 +1,3 @@
-
-.prizes-title-section
-	:background transparent
-	:position relative
-	:margin-top -20px
-	:z-index 1
-	:background-color transparent
-	:height 220px
-	:width 100%
-	+clearfix()
-
-.prizes-title
-	:background white
-	:width 30%
-	:top 0
-	:height 110%
-	:margin auto auto
-	:text-align center
-	:font-family $second-font
-	:font-size 3em
-
-
-
 .prize
 	:width (100%/3)
 	:float left
@@ -45,11 +22,12 @@
 		:text-align justify
 
 .first-place
-	:margin-top -60px
+	:margin-top 0px
 	h2
 		:font-size 4.5em
 
 .second-place, .third-place
+	:margin-top 60px
 	h2
 		:font-size 3em
 	ul
@@ -91,3 +69,17 @@
 	background-image: url(../images/linkedin.jpg)
 	right: -40px
 
+#prizes .images
+	:height 200px
+	:overflow hidden
+	:margin 50px auto
+	+clearfix()
+	img
+		:float left
+		:margin 0
+		:padding 0
+		:width 49%
+	img:first-child
+		:margin-right 0.1%
+	img:last-child
+		:margin-left 0.1%
